Mesh/Service/Istio/templates/OperatorService.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-operator
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack

  ports:
    - name: http-metrics
      port: 8383
      protocol: TCP
      targetPort: 8383

  selector:
    name: istio-operator
  sessionAffinity: None
  type: ClusterIP
