Mesh/Service/Istio/templates/GatewayLab.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gw
  namespace: core-prod
  # gitpods.writemy.codes,*.gitpods.writemy.codes,*.ws.gitpods.writemy.codes

  labels:
    wan-mode: 'public'

spec:
  gatewayClassName: cilium
  addresses:
    - value: 66.165.222.102

  listeners:
    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: 'gitpods.writemy.codes'
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode


    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.gitpods.writemy.codes'
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.ws.gitpods.writemy.codes'
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode
